gnpt: fix clear button in the main controller